// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getTypographyRootJssStyle() > should return correct css for baseTextStyle: { font: 'some font styles' }, responsiveStyle: { fontSize: 'some breakpoint customizable font styles' }, align: start, color: primary and ellipsis: false 1`] = `
{
  "all": "unset",
  "color": "var(--p-color-primary)",
  "display": "block",
  "font": "some font styles",
  "fontSize": "some breakpoint customizable font styles",
  "letterSpacing": "normal",
  "listStyleType": "none",
  "textAlign": "start",
  "whiteSpace": "inherit",
}
`;

exports[`getTypographyRootJssStyle() > should return correct css for baseTextStyle: {}, responsiveStyle: {}, align: center, color: contrast-high and ellipsis: false 1`] = `
{
  "all": "unset",
  "color": "var(--p-color-contrast-high)",
  "display": "block",
  "letterSpacing": "normal",
  "listStyleType": "none",
  "textAlign": "center",
  "whiteSpace": "inherit",
}
`;

exports[`getTypographyRootJssStyle() > should return correct css for baseTextStyle: {}, responsiveStyle: {}, align: end, color: contrast-high and ellipsis: true 1`] = `
{
  "all": "unset",
  "color": "var(--p-color-contrast-high)",
  "display": "block",
  "letterSpacing": "normal",
  "listStyleType": "none",
  "maxWidth": "100%",
  "overflow": "hidden",
  "textAlign": "end",
  "textOverflow": "ellipsis",
  "whiteSpace": "nowrap",
}
`;

exports[`getTypographySlottedJssStyle() > should return correct JssStyle 1`] = `
{
  "all": "unset",
}
`;
